# bookshelf-bot

./: .env_example  .gitignore  LICENSE  README.md  TODO.md  alembic.ini  bot.py  main.py  makefile  pyproject.toml
alembic/: env.py
bot/config_data/: config_reader.py
bot/core/: __init__.py  config.py
bot/core/models/: __init__.py  book.py  book_shemas.py  db_helper.py  orm.py  reader.py  reader_shemas.py
bot/database/: db.py  models.py  orm.py
bot/handlers/: bot_messages.py  user_commands.py  user_handlers.py
bot/handlers/commands/: __init__.py  admin_handlers.py  base_commands.py  crud_commands.py  questionary.py  user_commands.py
bot/keyboards/: __init__.py  builder.py  markups.py  reply_keyboard.py
bot/lexicon/: lexicon_data.py
bot/utils/: ai_engine.py  choice_helper.py  proxy.py  search.py  states.py
config_data/: __init__.py
database/: __init__.py
handlers/: __init__.py  user_handlers.py
keyboards/: __init__.py  markups.py
lexicon/: __init__.py  lexicon_data.py
