[tool.poetry]
name = "bookshelf-bot"
version = "0.1.0"
description = ""
authors = ["Krushovice <Kickstar69@yandex.ru>"]
readme = "README.md"
packages = [{include = "bookshelf_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
