[tool.poetry]
name = "bookshelf-bot"
version = "0.1.0"
description = ""
authors = ["Krushovice <Kickstar69@yandex.ru>"]
readme = "README.md"
packages = [{include = "bookshelf_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "3.1.1"
environs = "^10.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
pydentic = "^0.0.1.dev3"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
aiohttp-socks = "^0.8.4"
openai = "1.6"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
